# project_loop

./: .gitignore  .info.txt.swp  README.md  info.txt  ingestor.db  pyproject.toml  report.csv
data/: menu_hours.parquet  timezones.parquet
src/: algo.py  api.py  data_ingestion.py  exp.py  hello.csv  volatile.py
