[project]
name = "project-loop"
version = "0.1.0"
description = ""
authors = [
    {name = "rg",email = "gargrohan138@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars (>=1.27.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
